apps/flux-system/flux-operator/app/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.mirceanton.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
spec:
  hostnames: ["flux.admin.mirceanton.com"]
  parentRefs:
    - name: envoy-admin
      namespace: network-system
  rules:
    - backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
